<resources>
    <string name="app_name">AjudaDeCusto</string>
    <string name="origem">Origem</string>
    <string name="destino">Destino</string>
    <string name="distancia_em_km">Distancia em Km</string>
    <string name="tipo_de_combustivel">Tipo de Combustivel</string>
    <string name="valor_do_litro">Valor do Litro</string>
    <string name="autonomia_m_dia_km_l">Autonomia Média (Km/L)</string>
    <string name="calcular">Calcular</string>

    <string-array name="tipo_combustivel">
        <item>Escolha um Combustível</item>
        <item>Gasolina</item>
        <item>Alcool</item>
        <item>Diesel</item>
        <item>Gnv</item>
    </string-array>
    <string name="title_activity_principar_ver2">Principar_ver2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
