<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="407dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/fundoapp"
        tools:ignore="contentDescription" />


    <LinearLayout
        android:id="@+id/view_calculo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origem"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_cidorigem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destino"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_ciddestino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distancia_em_km"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_distkm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo_de_combustivel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spn_combustivel"
            android:layout_width="match_parent"
            android:layout_height="35dp" />

        <TextView
            android:id="@+id/TextView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valor_do_litro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_vallitro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autonomia_m_dia_km_l"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_autonomia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/bt_calcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total para a Ajuda de Custo"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/get_ajudacusto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt_sair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sair"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>